--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,16 @@
-.App {
+
+
+.title{
+  padding-bottom: 10px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  display: block;
-  max-width: 20%;
-  font-size: calc(10px + 2vmin);
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  padding-top: 10px;
+  background-color: #272343;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Container { 
+    max-width: 100%;
+    margin: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
