--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   padding-top: 10px;
   background-color: #272343;
   color: white;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 
 .Container { 
