--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -1,23 +1,32 @@
 .vertical-menu {
-    width: 200px; /* Set a width if you like */
+    width: 200px; 
     min-height: 100%;
   }
   
   .vertical-menu a {
-    background-color: #eee; /* Grey background color */
-    color: black; /* Black text color */
-    display: block; /* Make the links appear below each other */
-    padding: 12px; /* Add some padding */
-    text-decoration: none; /* Remove underline from links */
+    background-color: #eee; 
+    color: black; 
+    display: block; 
+    padding: 12px; 
+    text-decoration: none; 
   }
   
   .vertical-menu a:hover {
-    background-color: #E3F6F5; /* Dark grey background on mouse-over */
-   
+    background-color: #E3F6F5; 
   }
   
   .vertical-menu a.active {
-    background-color: #BAE8E8; /* Add a green color to the "active/current" link */
+    background-color: #BAE8E8; 
+    font-size: 20px;
     color: white;
   }
+
+#dropdown-item-button {
+    background-color: #BAE8E8; 
+    font-size: 20px;
+    color: white;
+    border: none;
+}
+
+
   
